llm-d/ai-grid/grid/enrollment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '3'
  labels:
    app: grid-enrollment
  name: grid-enrollment
  namespace: grid-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grid-enrollment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-08-31T21:57:15-04:00'
      creationTimestamp: null
      labels:
        app: grid-enrollment
    spec:
      containers:
      - env:
        - name: ENROLLMENT_CA_CERT
          value: /ca/ca-cert.pem
        - name: ENROLLMENT_CA_KEY
          value: /ca/ca-key.pem
        - name: ENROLLMENT_CA_COMMON_NAME
          value: grid-ca
        - name: ENROLLMENT_OPERATOR_TOKENS
          value: /ca/operators.txt
        - name: ENROLLMENT_LISTEN_ADDR
          value: 0.0.0.0:8080
        - name: ENROLLMENT_CERT_LIFETIME_SECS
          value: '2592000'
        - name: DB_CONNECTION_URL
          value: postgres://grid:gridpw@grid-enrollment-db:5432/enrollment
        - name: RUST_LOG
          value: info
        - name: ENROLLMENT_GOSSIP_KEY
          valueFrom:
            secretKeyRef:
              name: enrollment-ca      # generated by helpers/bootstrap.sh, same key as hub-swim-key
              key: gossip-key
        image: grid-enrollment
        imagePullPolicy: Always
        name: grid-enrollment
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /ca
          name: ca
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: ca
        secret:
          defaultMode: 420
          secretName: enrollment-ca
