llm-d/ai-grid/grid/enrollment/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: grid-enrollment-db
  namespace: grid-system
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: grid-enrollment-db
  type: ClusterIP
