llm-d/ai-grid/grid/enrollment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grid-enrollment
  namespace: grid-system
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: grid-enrollment
    weight: 100
  wildcardPolicy: None
